--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
 
     <div class="container-fluid">
         <div class="row">
-            <aside class="col-lg-3 bg-light">
+            <section class="col-lg-3 bg-light">
                 <h5 class="mt-1">Search for a City:</h5>
                 <div class="form-inline form-group">
                     <input class="form-control" type="text" id="search-value" />
-                    <button class="btn btn-primary" id="search-button"> <i class="fa fa-search"></i> </button>
+                    <button class="btn btn-primary" id="search-btn"> 
+                        <i class="fa fa-search"></i> 
+                    </button>
                 </div>
                 <ul class="list-group history"></ul>
-            </aside>
+            </section>
 
             <div class="col-lg-9">
-                <div id="today" class="mt-3"></div>
+                <div id="current" class="mt-3"></div>
                 <div id="forecast" class="row mt-3"></div>
             </div>
         </div>
