--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="col-lg-3 bg-light">
                 <h5 class="mt-1">Search for a City:</h5>
                 <div class="input-group mb-3">
-                    <input id="city-input" type="text" class="form-control" placeholder="Enter city name" aria-label="Enter city name">
+                    <input id="enter-city" type="text" class="form-control" placeholder="Enter city name" aria-label="Enter city name">
                     <div class="input-group-append">
                         <button class="btn btn-primary" type="button" id="search-button">
                             <i class="fas fa-search"></i>
@@ -34,31 +34,13 @@
             <div class="col-lg-9">
                 <div class="row mr-0">
                     <div class="col-lg-11 card m-3 d-none" id="today-weather">
-                        <div class="row">
-                            <div class="col-12">
-                                <h3 id="city-name" class="city-name align-middle"></h3>
-                                <img id="current-pic" alt="">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <p id="temperature"></p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <p id="humidity"></p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <p id="wind-speed"></p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12 d-flex">
-                                <p id="UV-index"></p>
-                            </div>
+                        <div class="card-body">
+                            <h3 id="city-name" class="city-name align-middle"></h3>
+                            <img id="current-pic" alt="">
+                            <p id="temperature"></p>
+                            <p id="humidity"></p>
+                            <p id="wind-speed"></p>
+                            <p id="UV-index"></p>
                         </div>
                     </div>
                 </div>
