--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <footer>
     <div class="bg-light py-4">
       <div class="container text-center">
-        <p class="text-muted mb-0 py-2">👾 Created by Taylor Gentry</p>
+        <p class="text-muted mb-0 py-2">🌦 Created by Taylor Gentry</p>
       </div>
     </div>
   </footer>
